New Features:
* `redcap_write` and `redcap_write_oneshot` are now tested and public.
* `redcap_write` and `redcap_write_oneshot` are now tested and public.
* `redcap_download_file_oneshot` function contributed by @johnaponte (Pull request #35)
* `redcap_upload_file_oneshot` function contributed by @johnaponte (Pull request #34)

Breaking Changes:
* The `records_collapsed` default empty value is now an empty string (ie, "") instead of NULL.  This applies when `records_collapsed` is either a parameter, or a returned value.

Updates:
* By default, the SSL certs come from the `httr` package.  However, REDCapR will continue to maintain a copy in case httr's version on CRAN gets out of date.
* The tests are split into two collections: one that's run by the CRAN checks, and the other run manually.  [Thanks, Gabor Csardi](http://stackoverflow.com/questions/25595487/testthat-pattern-for-long-running-tests).

Version 0.3 (Developed 2014-07-03 through 2014-09-01)
------------------------------------------------------------------------------
New Features:
* Relies on the `httr` package, which provides benefits like the status code message can be captured (eg, 200-OK, 403-Forbidden, 404-NotFound).  See http://cran.r-project.org/web/packages/httr/.

Updates:
* Renamed the former `status_message` to `outcome_message`. This is because the message associated with http code returned is conventionally called the 'status messages' (eg, OK, Forbidden, Not Found).
* If an operation is successful, the `raw_text` value` (which was formerly called `raw_csv`) is returned as an empty string to save RAM.  It's not really necessary with httr's status message exposed.

Bug Fixes:
 * Correct batch reads with longitudinal schema #27

Version 0.2 (Developed 2014-01-14 through 2014-07-02)
------------------------------------------------------------------------------
New Features:
* Added `redcap_column_sanitize()` function to address non-ASCII characters